--- a/invest/project.html
+++ b/invest/project.html
@@ -8,7 +8,7 @@
   <meta name="title" property="og:title" content="td. trend research platform">
   <meta name="description" property="og:description"
     content="Internet behaviour research into world events, companies, markets and many more.With our automated research platform you will create reports over global impact and interest in the events, companies, currencies, etc. you set.">
-  <meta property="og:type" content="behaviour trends insights platform">
+  <meta property="og:type" content="article">
   <meta name="author" content="trendy dots">
 
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@0.7.4/dist/tailwind.min.css?v=3nov" rel="stylesheet">
@@ -51,13 +51,13 @@
     style="box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 100%; position: fixed; top: 0; z-index: 100; 
     background: linear-gradient(90deg, #ffffff 0%, #eceff1 100%);">
-    <span class="flex items-center">
+    <span class=" flex items-center">
       <a href="https://trendydots.com" class="block text-left" target="_blank">
         <img src="assets/img/logo.png" class="h-8 sm:h-8 rounded-full" alt="logo" />
       </a>
       &nbsp;
       <b class="text-lg flex text-left" style="font-size: 1.35rem;">
-        <span style="color: #606f7b; display: inline; text-indent: 0.2em">trend research
+        <span style="color: #606f7b; display: inline; text-indent: 0.2em; font-weight: 700;">trend research
         </span>
       </b>
     </span>
@@ -94,25 +94,26 @@
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal text-grey-darker">
-        Internet behaviour research into world events, companies, markets and many more.
+        <span style=" color:black; font-family: sans-serif; font-weight:bold; line-height: 2;"> td<span
+            style="color:#FBB82B">.</span>
+          <span style="font-weight:500;">trend research</span>
+        </span>
+        <br>
+        Your first step to <br> market research
       </h1>
-      <h2 class="my-4 font-normal">
-        Information empowers good decisions.
-        With our automated research platform you will create reports over global impact
-        and interest in the events, companies, currencies, etc. you set.
-      </h2>
     </div>
   </section>
   <!-- statement 2 -->
   <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center">
-    <h1 class="m-8 font-normal text-center">
-      <i>
-        We offer an up-to-date broad spectrum of information. <br />
-        Fast and reliable,
-        the trend research platform lets you discover with ease behavioural economics and global interest in your
-        selected
-        topics.
-      </i>
+    <h1 class="m-8  text-center">
+      We offer an up-to-date broad spectrum of information. <br />
+      Fast and reliable,
+      our platform lets
+      you discover with ease
+      behavioural
+      economics and global interest in your
+      selected
+      topics.
     </h1>
   </section>
 
@@ -171,7 +172,7 @@
   <section class="antialiased font-sans w-full text-left text-black py-8" id="subscribe-section"
     style="border-top: 1px solid #dddd; border-bottom: 1px solid #dddd">
     <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
-      <h3 class="text-2xl">Join our journey</h3>
+      <h1 class="my-4 font-normal text-grey-darker">Join our journey</h1>
       <p class="">
         As we are working hard to achieve a great quality platform, we need
         your expert opinion. Follow our patreon posts to keep up with developments. Becoming a Supporter patron gives
@@ -194,7 +195,7 @@
       <div class="w-full flex flex-col text-center items-center justify-center">
         <!-- contact form -->
         <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
-          <h3 class="text-2xl">Interested in trying out the platform at scale?</h3>
+          <h1 class="my-4 font-normal text-grey-darker">Interested in trying out the platform at scale?</h1>
           <p class="">
             Are you a media company, newspaper, or any business which is interested in internet behaviour research?
             Request a demo by filling out this form. We will happily contact you with details.
