--- a/invest/project.html
+++ b/invest/project.html
@@ -89,33 +89,61 @@
   <!-- header statement-->
   <section style="margin-top:5em"
     class="my-8 font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-    <div class="w-full lg:w-1/2">
+    <div class="w-full lg:w-2/3">
       <img src="./assets/img/in3.png" alt="" />
     </div>
-    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
+    <div class="w-full lg:w-1/3 flex flex-col justify-center items-start p-8 items-center lg:items-start">
+
       <h1 class="my-4 font-normal text-grey-darker">
         <span style=" color:black; font-family: sans-serif; font-weight:bold; line-height: 2;"> td<span
             style="color:#FBB82B">.</span>
           <span style="font-weight:500;">trend research</span>
         </span>
-        <br>
-        Your first step to <br> market research
+        Your first step to market research
       </h1>
+
+      <a href="#contact-us" target="_self"
+        class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center"
+        style="border-color: pink;">
+        <span> Contact us</span>
+      </a>
+    </div>
+
+  </section>
+
+
+  <!-- we offer -->
+  <section class="my-8 font-sans w-full p-8 flex flex-col lg:flex-col text-center" style="background: #F5F5F5;">
+    <div class="text-center">
+      <h1 class="my-4 font-medium">We offer</h1>
+    </div>
+    <div class="flex flex-col sm:flex-row flex-wrap my-8 w-full items-center justify-around">
+      <div
+        class=" w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center h-48 md:h-64 border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
+
+        <h3 class="mt-4 mb-1">Performance</h3>
+        <p class="mt-4 text-center text-grey-dark leading-normal px-6 ">Build reports whith you keywords in seconds.
+          Take
+          notes about your findings. Revisit your research any time.</p>
+      </div>
+      <div
+        class=" w-full sm:w-1/2 md:w-1/4  flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
+
+        <h3 class="mt-4 mb-1">Scalability</h3>
+        <p class="mt-4 text-center text-grey-dark leading-normal ">With a growing application markeplace, our platform
+          offer you a multitude of public data interpretors.</p>
+      </div>
+      <div
+        class=" w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
+
+        <h3 class="mt-4 mb-1">Friendly Intergations</h3>
+        <p class="mt-4 text-center text-grey-dark leading-normal ">Build your own apps on top of our system. Your data
+          sources can complement ours so that your results are benefit from both.</p>
+      </div>
+
     </div>
   </section>
-  <!-- statement 2 -->
-  <section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center">
-    <h1 class="m-8  text-center">
-      We offer an up-to-date broad spectrum of information. <br />
-      Fast and reliable,
-      our platform lets
-      you discover with ease
-      behavioural
-      economics and global interest in your
-      selected
-      topics.
-    </h1>
-  </section>
+
 
   <section
     class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
@@ -169,7 +197,7 @@
 
 
   <!-- Form -->
-  <section class="antialiased font-sans w-full text-left text-black py-8" id="subscribe-section"
+  <section id="contact-us" class="antialiased font-sans w-full text-left text-black py-8" id="subscribe-section"
     style="border-top: 1px solid #dddd; border-bottom: 1px solid #dddd">
     <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
       <h1 class="my-4 font-normal text-grey-darker">Join our journey</h1>
