--- a/invest/project.html
+++ b/invest/project.html
@@ -200,7 +200,7 @@
   <section id="contact-us" class="antialiased font-sans w-full text-left text-black py-8" id="subscribe-section"
     style="border-top: 1px solid #dddd; border-bottom: 1px solid #dddd">
     <div class="container mx-auto max-w-xl py-8 font-normal leading-normal text-center lg:text-left ">
-      <h1 class="my-4 font-normal text-grey-darker">Join our journey</h1>
+      <h1 class="my-4 font-normal text-grey-darker">Join our crowdfunding journey</h1>
       <p class="">
         As we are working hard to achieve a great quality platform, we need
         your expert opinion. Follow our patreon posts to keep up with developments. Becoming a Supporter patron gives
