--- a/invest/index.html
+++ b/invest/index.html
@@ -138,7 +138,7 @@
 
         <h3 class="mt-4 mb-1">Friendly Intergations</h3>
         <p class="mt-4 text-center text-grey-dark leading-normal ">Build your own apps on top of our system. Your data
-          sources can complement ours so that your results are benefit from both.</p>
+          sources can complement ours so that your results benefit from both.</p>
       </div>
 
     </div>
