--- a/invest/index.html
+++ b/invest/index.html
@@ -122,7 +122,7 @@
         class=" w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center h-48 md:h-64 border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
 
         <h3 class="mt-4 mb-1">Performance</h3>
-        <p class="mt-4 text-center text-grey-dark leading-normal px-6 ">Build reports whith you keywords in seconds.
+        <p class="mt-4 text-center text-grey-dark leading-normal px-6 ">Build reports with your keywords in seconds.
           Take
           notes about your findings. Revisit your research any time.</p>
       </div>
@@ -130,8 +130,8 @@
         class=" w-full sm:w-1/2 md:w-1/4  flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
 
         <h3 class="mt-4 mb-1">Scalability</h3>
-        <p class="mt-4 text-center text-grey-dark leading-normal ">With a growing application markeplace, our platform
-          offer you a multitude of public data interpretors.</p>
+        <p class="mt-4 text-center text-grey-dark leading-normal ">With a growing application marketplace, our platform
+          offers you a multitude of public data interpreters.</p>
       </div>
       <div
         class=" w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
