--- a/invest/project.html
+++ b/invest/project.html
@@ -7,7 +7,7 @@
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
   <meta name="title" property="og:title" content="td. trend research platform">
   <meta name="description" property="og:description"
-    content="Internet behaviour research into world events, companies, markets and many more.With our automated research platform you will create reports over global impact and interest in the events, companies, currencies, etc. you set.">
+    content="Your first step to market research. Join the crowdfunding.">
   <meta property="og:type" content="article">
   <meta name="author" content="trendy dots">
 
