--- a/invest/project.html
+++ b/invest/project.html
@@ -379,9 +379,11 @@
       <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
         <h4 class="py-2 uppercase font-bold tracking-wide">About</h4>
         <p>
-          Trendy Dots is a hobby project developing fun applications for data science, data visualization and user
-          experience. I playfully apply UX and data science best practices to big data, aiming to produce high value
-          tools.
+          Trendy Dots is a project developing fun applications for data science, data visualization and user experience.
+          It gives insights into behaviour patterns on the internet at scale: people's interests in products, companies,
+          markets, world events, etc. <br> <br> I playfully apply UX and data science best practices to big data, aiming
+          to
+          produce high value tools. <br> <a href="../me/index.html" target="_blank" style="color:#000">More about me</a>
         </p>
       </div>
       <div class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
