--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
   </nav>
 
   <!-- header statement-->
-  <section style="margin-top:5em"
-    class="my-8 font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+  <section style="margin-bottom: 0; margin-top:5em; "
+    class="font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-2/3">
       <img src="./assets/img/in3.png" alt="" />
     </div>
@@ -111,7 +111,8 @@
 
 
   <!-- we offer -->
-  <section class="my-8 font-sans w-full p-8 flex flex-col lg:flex-col text-center" style="background: #F5F5F5;">
+  <section class="font-sans w-full p-8 flex flex-col lg:flex-col text-center"
+    style="background: #F5F5F5; margin-bottom: 0;">
     <div class="text-center">
       <h1 class="my-4 font-medium">We offer</h1>
     </div>
@@ -279,7 +280,7 @@
             <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
               <button type="submit"
                 class="submit btn btn-primary btn-shadow btn-gradient py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
-                style=" font-weight: 800; color: #FBB82B; background: #f1f5f8;">Send Message</button>
+                style=" font-weight: 800; border:1px solid #FBB82B;">Send Message</button>
             </div>
             <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
 
@@ -402,11 +403,12 @@
     </div>
     <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center">
       ©2020 trendydots.com All rights reserved. &nbsp;
-      <a href="./privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
+      <a href="http://trendydots.com/privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
       &nbsp;
-      <a href="./terms-of-service.html" target="_blank" style="color:#000"> Terms of service</a>
+      <a href="http://trendydots.com/terms-of-service.html" target="_blank" style="color:#000"> Terms of service</a>
       &nbsp;
-      <a href="./imprint.html" target="_blank" class="inline-block py-2 px-3 text-black">Impressum</a>
+      <a href="http://trendydots.com/imprint.html" target="_blank"
+        class="inline-block py-2 px-3 text-black">Impressum</a>
     </div>
   </footer>
 
