--- a/invest/index.html
+++ b/invest/index.html
@@ -57,7 +57,7 @@
       </a>
       &nbsp;
       <b class="text-lg flex text-left" style="font-size: 1.35rem;">
-        <span style="color: #606f7b; display: inline; text-indent: 0.2em; font-weight: 700;">trend research
+        <span style="display: inline; text-indent: 0.2em; font-weight: 900;">trendy dots
         </span>
       </b>
     </span>
@@ -87,20 +87,18 @@
   </nav>
 
   <!-- header statement-->
-  <section style="margin-top:5em"
-    class="my-8 font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+  <section style="margin-bottom: 0; margin-top:5em; "
+    class="font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-2/3">
       <img src="./assets/img/in3.png" alt="" />
     </div>
-    <div class="w-full lg:w-1/3 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-
-      <h1 class="my-4 font-normal text-grey-darker">
-        <span style=" color:black; font-family: sans-serif; font-weight:bold; line-height: 2;"> td<span
-            style="color:#FBB82B">.</span>
-          <span style="font-weight:500;">trend research</span>
-        </span>
+    <div class="w-full lg:w-1/3 flex flex-col justify-center items-start items-center lg:items-start">
+      <h2 class="my-4 font-normal">
+        <span style="font-weight:500; color:black;">The trend research platform</span>
+      </h2>
+      <h2 class="my-4 font-normal text-grey-darker">
         Your first step to market research
-      </h1>
+      </h2>
 
       <a href="#contact-us" target="_self"
         class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center"
@@ -113,7 +111,8 @@
 
 
   <!-- we offer -->
-  <section class="my-8 font-sans w-full p-8 flex flex-col lg:flex-col text-center" style="background: #F5F5F5;">
+  <section class="font-sans w-full p-8 flex flex-col lg:flex-col text-center"
+    style="background: #F5F5F5; margin-bottom: 0;">
     <div class="text-center">
       <h1 class="my-4 font-medium">We offer</h1>
     </div>
@@ -281,7 +280,7 @@
             <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
               <button type="submit"
                 class="submit btn btn-primary btn-shadow btn-gradient py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
-                style=" font-weight: 800; color: #FBB82B; background: #f1f5f8;">Send Message</button>
+                style=" font-weight: 800; border:1px solid #FBB82B;">Send Message</button>
             </div>
             <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
 
@@ -383,7 +382,7 @@
           It gives insights into behaviour patterns on the internet at scale: people's interests in products, companies,
           markets, world events, etc. <br> <br> I playfully apply UX and data science best practices to big data, aiming
           to
-          produce high value tools. <br> <a href="../me/index.html" target="_blank" style="color:#000">More about me</a>
+          produce high value tools. <br> <a href="./me/index.html" target="_blank" style="color:#000">More about me</a>
         </p>
       </div>
       <div class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
@@ -404,11 +403,12 @@
     </div>
     <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center">
       ©2020 trendydots.com All rights reserved. &nbsp;
-      <a href="../privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
+      <a href="http://trendydots.com/privacy-statement.html" target="_blank" style="color:#000">Privacy statement</a>
       &nbsp;
-      <a href="../terms-of-service.html" target="_blank" style="color:#000"> Terms of service</a>
+      <a href="http://trendydots.com/terms-of-service.html" target="_blank" style="color:#000"> Terms of service</a>
       &nbsp;
-      <a href="../imprint.html" target="_blank" class="inline-block py-2 px-3 text-black">Impressum</a>
+      <a href="http://trendydots.com/imprint.html" target="_blank"
+        class="inline-block py-2 px-3 text-black">Impressum</a>
     </div>
   </footer>
 
