--- a/mirror/index.html
+++ b/mirror/index.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
 
-<!--
-Copyright 2017 Google Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
-
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="description" content="td. web mirror">
-    <meta name="author" content="//samdutton.com">
+    <meta name="author" content="trendydots.com">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta itemprop="name" content="simpl.info: simplest possible examples of HTML, CSS and JavaScript">
     <meta itemprop="image" content="http://trendydots.com/assets/img/logo.png">
