--- a/index.html
+++ b/index.html
@@ -392,8 +392,10 @@
         <div class="flex pl-0 md:pl-4 justify-start">
           <!-- 
         <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
-        <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
-       -->
+          -->
+          <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" target="_blank"
+            href="https://www.facebook.com/trendydots.research"><i class="fab fa-facebook"></i></a>
+
           <a class="block flex items-center text-grey-darkest hover:text-black no-underline" target="_blank"
             href="https://twitter.com/trendydots">
             <i class="fab fa-twitter"></i>
