--- a/invest/project.html
+++ b/invest/project.html
@@ -394,6 +394,9 @@
         <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
         <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
        -->
+          <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" target="_blank"
+            href="https://www.facebook.com/trendydots.research"><i class="fab fa-facebook"></i></a>
+
           <a class="block flex items-center text-grey-darkest hover:text-black no-underline" target="_blank"
             href="https://twitter.com/trendydots">
             <i class="fab fa-twitter"></i>
