--- a/euvsvirus/app.html
+++ b/euvsvirus/app.html
@@ -36,98 +36,7 @@
 
 <body style="background: #eee; ">
 
-  <!-- large cards-5 -->
-  <div class="col s12">
-    <div class="card">
-      <div class="card-content">
-        <div class="card-title">Carnival in Venice</div>
-      </div>
-      <div class="card-image">
-        <img src="./img/events/1.png">
-        <a class="btn-floating halfway-fab waves-effect waves-light">
-          <img src="./img/flags/italy.png" style="height: 100%;width: 100%;">
-        </a>
-      </div>
-      <div class="card-content">
-        <p>The Carnival of Venice is an annual festival held in Venice, Italy. The carnival ends with the Christian
-          celebration of Lent, forty days before Easter, on Shrove Tuesday, the day before Ash Wednesday. (Wikipedia)
-        </p>
-      </div>
-
-      <div class="card-tabs">
-        <ul class="tabs tabs-fixed-width">
-          <li class="tab"><a href="#test4">Dates</a></li>
-          <li class="tab"><a href="#test5">Food</a></li>
-          <li class="tab"><a href="#test6">Drinks</a></li>
-        </ul>
-      </div>
-      <div class="card-content grey lighten-4">
-        <div id="test4" style="display: block; line-height: 1.7em;">
-          <!-- Dates -->
-          Sat, Jan 30, 2021 – Tue, Feb 16, 2021
-          <br>
-          <b>Location:</b> Venice, Italy
-          <br>
-          <b>Attendance before COVID-19:</b> ~ 3 million
-        </div>
-        <div id="test5" style="display: none;">
-          <!-- Food -->
-          <div class="card">
-            <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="./img/foods/cichetti.png">
-            </div>
-            <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">Chicetti<i
-                  class="material-icons right">shopping_cart</i></span>
-              <p> Cicchetti are small snacks or side dishes, typically served in traditional "bàcari" in Venice</p>
-              <ul class="collection product-list">
-                <li class="collection-item">
-                  <div>Pesto Rosso<a href="#!" class="secondary-content"><i class="material-icons">shopping_cart</i></a>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">Cicchetti<i class="material-icons right">close</i></span>
-              <p>Ingredients and products from Venice</p>
-            </div>
-          </div>
-
-        </div>
-        <div id="test6" style="display: none;">
-          <!-- Drink -->
-          <div class="card">
-            <div class="card-image waves-effect waves-block waves-light">
-              <img class="" src="./img/foods/aperol-spritz.png">
-            </div>
-            <div class="card-content pb-0">
-              <span class="card-title grey-text text-darken-4">Spritz Veneziano</span>
-              <p> A Spritz Veneziano or Aperol Spritz, also called just Spritz, is an Italian wine-based cocktail,
-                commonly served as an aperitif in Northeast Italy. </p>
-              <ul class="collection product-list">
-                <li class="collection-item">
-                  <div>Prosecco<a href="#!" class="secondary-content"><i class="material-icons">shopping_cart</i></a>
-                  </div>
-                </li>
-                <li class="collection-item">
-                  <div>Aperol<a href="#!" class="secondary-content"><i class="material-icons">shopping_cart</i></a>
-                  </div>
-                </li>
-              </ul>
-            </div>
-
-          </div>
-        </div>
-      </div>
-      <div class="card-action">
-        <a href="#">
-          < Back to Calendar</a>
-      </div>
-    </div>
-  </div>
-
-
-  <!-- small cards-5 -->
+  <!-- small cards italy -->
   <div class="col s12">
     <div class="card">
       <div class="card-image">
@@ -141,12 +50,114 @@
         <p>The Carnival of Venice is an annual festival held in Venice, Italy. The carnival ends with the Christian
           celebration of Lent, forty days before Easter, on Shrove Tuesday, the day before Ash Wednesday. (Wikipedia)
         </p>
+        <p>
+          <br>
+          <b>When</b> <br>
+          Feb 8, 2020 – Feb 23, 2020</p>
       </div>
       <div class="card-action">
-        <a href="#">Find out more</a>
+        <a href="./italy.html" target="_self">Find out more</a>
       </div>
     </div>
   </div>
+
+  <!-- small portugal -->
+  <div class="col s12">
+    <div class="card">
+      <div class="card-image">
+        <img src="./img/events/2.jpg">
+        <a class="btn-floating halfway-fab waves-effect waves-light">
+          <img src="./img/flags/portugal.png" style="height: 100%;width: 100%;">
+        </a>
+      </div>
+      <div class="card-content">
+        <div class="card-title">Festas de santo António</div>
+        <p>Annual party that takes place between the 12th and 13th of June in Lisbon to celebrate Santo António.
+          Lisbon is filled with garlands, colors, flowers, live music performances and popular marches. </p>
+        <p>
+          <br>
+          <b>When</b> <br>
+          Jun 12, 2020 - Jun 13, 2020</p>
+      </div>
+      <div class="card-action">
+        <a href="./portugal.html" target="_self">Find out more</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- small france -->
+  <div class="col s12">
+    <div class="card">
+      <div class="card-image">
+        <img src="./img/events/5.jpg">
+        <a class="btn-floating halfway-fab waves-effect waves-light">
+          <img src="./img/flags/france.png" style="height: 100%;width: 100%;">
+        </a>
+      </div>
+      <div class="card-content">
+        <div class="card-title">The Festival of Avignon </div>
+        <p>The Avignon Festival is a theater festival organized every year since 1947. It takes place in July in the
+          courtyard of the Palais des Papes as well as in other locations of the city. Founded in 1947 by Jean Vilar, it
+          is the oldest existent festival in France and one of the world's greatest.<p>
+            <br>
+            <b>When</b> <br>
+            3 Jul, 2020 - 23 Jul, 2020</p>
+      </div>
+      <div class="card-action">
+        <a href="#" target="_self">Find out more</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- small sweden -->
+  <div class="col s12">
+    <div class="card">
+      <div class="card-image">
+        <img src="./img/events/3.jpg">
+        <a class="btn-floating halfway-fab waves-effect waves-light">
+          <img src="./img/flags/sweden.png" style="height: 100%;width: 100%;">
+        </a>
+      </div>
+      <div class="card-content">
+        <div class="card-title">Kräftskiva (Crayfish Party)</div>
+        <p>This seasonal tradition starts in early August and goes until September.
+          The majority of people celebrate it outdoors, decorating colorful gaily paper lanterns around the table.
+          <p>
+            <br>
+            <b>When</b> <br>
+            Aug 6, 2020 - Sep 01, 2020</p>
+      </div>
+      <div class="card-action">
+        <a href="#" target="_self">Find out more</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- small germany -->
+  <div class="col s12">
+    <div class="card">
+      <div class="card-image">
+        <img src="./img/events/4.jpg">
+        <a class="btn-floating halfway-fab waves-effect waves-light">
+          <img src="./img/flags/germany.png" style="height: 100%;width: 100%;">
+        </a>
+      </div>
+      <div class="card-content">
+        <div class="card-title">Oktoberfest </div>
+        <p>The Oktoberfest is the world's largest Volksfest. Held annually in Munich, Bavaria, Germany, it is a 16- to
+          18-day folk festival running from mid or late September to the first Sunday in October. It is the world's
+          largest beer celebration and originated on October 12, 1810, in celebration of the marriage of the crown
+          prince of Bavaria, who later became King Louis I, to Princess Therese von Sachsen-Hildburghausen.<p>
+            <br>
+            <b>When</b> <br>
+            Sep 19, 2020 - Oct 6, 2020</p>
+      </div>
+      <div class="card-action">
+        <a href="#" target="_self">Find out more</a>
+      </div>
+    </div>
+  </div>
+
 
 
   <script> M.AutoInit();</script>
