--- a/euvsvirus/councils.html
+++ b/euvsvirus/councils.html
@@ -26,7 +26,7 @@
 <body style="position: absolute; height: 100vh; overflow: hidden;">
     <!-- html[0] -->
     <div class="z-depth-3"
-        style="position: fixed; height: 60px; width: 100%; background: #FFECB3;; z-index: 100; font-weight: bold; text-indent: 2em;">
+        style="position: fixed; height: 60px; width: 100%; background: #EEEEEE;text-align: center; z-index: 100; font-weight: bold; text-indent: 2em;">
         <img src="./img/logo.png" style="height: 90%; vertical-align: middle;"> for the City Council of Venice,Italy
 
         <a class="waves-effect waves-light btn red"
