--- a/euvsvirus/index.html
+++ b/euvsvirus/index.html
@@ -28,10 +28,21 @@
   <!-- html[0] -->
   <div class="row">
     <div class="container">
+      <div class="col s6">
+        <div class="">
+          <br><br><br><br>
+          <h2 class="col s12 c-white b"> <img class="responsive-img" src="./img/logo.png"> </h2>
+          <h5 class="col s12 c-offwhite b">
+            A smart calendar system that shows users culinary and cultural snippets from all European regions
+            <br><br>
+
+            Enjoy the experience from the comfort of your own home, with original products</h5>
+        </div>
+      </div>
 
       <div class="col s6">
         <div class="col s2"></div>
-        <div class="col s8">
+        <div class="col s8" style="padding-top: 30px;">
           <img src="https://trendydots.com/mobile-stitches/images/demo-phone2.png" style="
                     position: absolute;
                     width: 458px;
@@ -69,17 +80,6 @@
           </iframe>
         </div>
         <div class="col s2"></div>
-      </div>
-      <div class="col s6">
-        <div class="">
-          <br><br><br><br>
-          <h2 class="col s12 c-white b"> <img class="responsive-img" src="./img/logo.png"> </h2>
-          <h5 class="col s12 c-offwhite b">
-            A smart calendar system that shows users culinary and cultural snippets from all European regions
-            <br><br>
-
-            Enjoy the experience from the comfort of your own home, with original products</h5>
-        </div>
       </div>
     </div>
   </div>
