--- a/euvsvirus/index.html
+++ b/euvsvirus/index.html
@@ -37,6 +37,8 @@
             <br><br>
 
             Enjoy the experience from the comfort of your own home, with original products</h5>
+          <br><br><br><br>
+          <p>For this demo, only the first 2 events are interactive</p>
         </div>
       </div>
 
