--- a/euvsvirus/councils.html
+++ b/euvsvirus/councils.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="https://trendydots.com/mobile-stitches/public/materialize.min.css"
         media="screen,projection" />
 
-    <title>td. mobile stitches</title>
+    <title>Bites of Culture</title>
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
