--- a/euvsvirus/index.html
+++ b/euvsvirus/index.html
@@ -12,7 +12,7 @@
     media="screen,projection" />
   <link type="text/css" rel="stylesheet" href="./styles.css" />
 
-  <title>td. mobile stitches</title>
+  <title>Bites of Culture</title>
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
