--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -37,10 +37,6 @@
       <span style="font-weight: 600;"> web-stitches</span>
     </a>
 
-    <span class="block text-center" style="line-height:40px;">A web application that helps you rapidly design a landing
-      page and mobile
-      screens</span>
-
     <ul class="md:text-sm text-xs text-grey-dark list-reset flex items-center flex-row">
       <li>
         <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
@@ -65,7 +61,7 @@
 
 
   <!-- header mobile statement-->
-  <section style="margin-bottom: 0; margin-top:5em; "
+  <section style="margin-bottom: 0; margin-top:110px; "
     class="font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-2/3">
       <img src="./images/m-header.png" alt="" style="margin-top: 20px;" />
@@ -88,8 +84,8 @@
 
   </section>
   <!-- header desktop statement-->
-  <section style="margin-bottom: 0; margin-top:5em; "
-    class="font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+  <section style="margin-bottom: 0; margin-top:70px; "
+    class="font-sans container m-auto max-w-xl flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
 
     <div class="w-full lg:w-1/3 flex flex-col justify-center items-start items-center lg:items-start">
       <h2 class="my-4 font-normal">
